--- a/web-ui/public/index.html
+++ b/web-ui/public/index.html
@@ -11,6 +11,7 @@
       content="A demo web application intended as an educational tool for demonstrating how Amazon IVS, in conjunction with other AWS services, can be used to build a compelling customer experience for user-generated content (UGC) use-cases"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.17.0/video-js.css" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -21,9 +22,9 @@
       Load videojs and required IVS tech scripts.
       Look in web-ui/src/components/videoPlayer.jsx to see how these are initialized.
     -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.14.3/video.min.js"></script>
-    <script src="https://player.live-video.net/1.6.1/amazon-ivs-videojs-tech.min.js"></script>
-    <script src="https://player.live-video.net/1.6.1/amazon-ivs-quality-plugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.17.0/video.min.js"></script>
+    <script src="https://player.live-video.net/1.7.0/amazon-ivs-videojs-tech.min.js"></script>
+    <script src="https://player.live-video.net/1.7.0/amazon-ivs-quality-plugin.min.js"></script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
